# gdem-estactico

./: .bash_history  .bashrc  .gitignore  .mcp.json  .profile  .wget-hsts  README.md  tsconfig.json
.devcontainer/: devcontainer.json
Temp/: Postmark-Message-Streams.md
doc/: PCI-001-Despliegue-Nicepage-Cloudflare-Pages.md  api-token-crear-otros-api-tokens.md
doc/cloudflare/: 00_INDICE.md  01_cloudflare-skills-analisis-integracion-oac.md  02_cloudflare-skills-plan-integracion.md  03_GUIA-REPLICACION.md  04_install-cloudflare-skills.sh  05_.mcp.json.ejemplo  06_GUIA-INTEGRACION-SKILLS-MCP-IA.md
doc/hugo/: 00_INDICE.md  01_hugo-informacion-completa.md  02_hugo-skills-mcp-herramientas-ia.md  03_hugo-servidores-mcp-explicacion.md  04_hugo-patrones-ia-explicacion.md  05_hugo-analisis-herramientas-ia.md  05b_complementariedad-mcp-skill-hugo.md  06_investigacion-claude-skills.md  07_candidatos-conversion-piloto-skills.md  08_template-conversion-claude-oc.md  09_catalogo-patrones-adaptacion.md  10_guia-permisos.md  11_plan-integracion-oac.md
doc/oac/: guia-openagentscontrol-oac.md
halans-mcp-server/: .gitignore  CLAUDE.md  README.md  mcp-stdio.js  package-lock.json  package.json  worker-configuration.d.ts  wrangler.jsonc
halans-mcp-server/src/: index.ts
hugo-mcp/: README.md  main.py  pyproject.toml
hugo-mcp/utils/: __init__.py  content.py  deployment.py  site.py  system.py  theme.py
project/: pci-prompt.md
project/ESDS/: 00_INDICE.md  02_Listas_consolidadas.md  05_Servicios-eSdS-formulario_revisado.md  06_www_inspirealtea_com.md  09_proceso-keyword-research.md  (+7 more)
(+320 files in other folders)
