[project]
name = "hugo-mcp"
version = "0.1.0"
description = "A powerful MCP (Model Control Protocol) server for managing Hugo static site generator."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "bs4>=0.0.2",
    "httpx>=0.28.1",
    "mcp[cli]>=1.6.0",
    "pyyaml>=6.0.2",
    "requests>=2.32.3",
]
